# audio-spectrum-visualizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: audioinputhandler.cpp  audioinputhandler.h  common.hpp  dialogsettings.cpp  dialogsettings.h  dialogsettings.ui  dlgsettings.cpp  dlgsettings.h  dlgsettings.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  overlappedringbuffer.hpp  resource_file.qrc  ringbuffer.hpp  spectrumimagegenerator.cpp  spectrumimagegenerator.h  tests.hpp  wgtamplitude.cpp  wgtamplitude.h  wgtfrequencyviewer.cpp  wgtfrequencyviewer.h  widgetamplitude.cpp  widgetamplitude.h  widgetfrequencyviewer.cpp  widgetfrequencyviewer.h
